# PixTPC_beamtest

./: CMakeLists.txt  LinkDef.h  PixelTPCdata.cpp  PixelTPCdata.h  README.md  mainPixTPC.cpp  setup.sh
config/: ChipChnMaps.csv
dataModel/: LinkDef.h  LinkDef_MCTrackdata.h  LinkDef_PixelTPCdata.h  MCTrackdata.cpp  MCTrackdata.h  PixelTPCdata.cpp  PixelTPCdata.h
include/: BeamUnities.h  GenSimData.h  JsonStruct.h  PixHitRecoCCAProcessor.h  PixHitRecoSimpleProcessor.h  PixelMatrix.h  PrintProcessor.h  ProcessManager.h  Processor.h  Rawdata2ROOT.h  RawdataConverter.h
macro/: Read01.ipynb  ReadData.cpp  ReadData.py  Uproot.ipynb
src/: BeamUnities.cpp  GenSimData.cpp  PixHitRecoCCAProcessor.cpp  PixHitRecoSimpleProcessor.cpp  PixelMatrix.cpp  PrintProcessor.cpp  ProcessManager.cpp  Processor.cpp  Rawdata2ROOT.cpp  RawdataConverter.cpp
task/: task00.json  task01.json  taskPlot.json  taskRecoHitSimple.json
